Fix widget boxes on mobile

--- a/app/assets/stylesheets/content/_widget_box.sass
+++ b/app/assets/stylesheets/content/_widget_box.sass
@@ -124,3 +124,8 @@ $widget-box--enumeration-width: 20px
           //necessary for correct alignment even with long texts
           width: calc(100% - #{$widget-box--enumeration-width})
 
+@include breakpoint(680px down)
+  .widget-boxes
+    &.-flex
+      .widget-box
+        flex-basis: 100%
